--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 </head>
 
 <body>
-    <!-- <div id="unity-container" class="unity-desktop">
+    <div id="unity-container" class="unity-desktop">
         <canvas id="unity-canvas" width=1920 height=1080 tabindex="-1"></canvas>
         <div id="unity-loading-bar">
             <div id="unity-logo"></div>
             <div id="unity-progress-bar-empty">
                 <div id="unity-progress-bar-full"></div>
             </div>
-        </div> -->
-    <div id="unity-warning"> </div>
-    <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">IdaFightSoma</div>
-    </div>
+        </div>
+        <div id="unity-warning"> </div>
+        <div id="unity-footer">
+            <!-- <div id="unity-webgl-logo"></div>
+            <div id="unity-fullscreen-button"></div>
+            <div id="unity-build-title">IdaFightSoma</div> -->
+        </div>
     </div>
     <script>
         var container = document.querySelector("#unity-container");
