--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         }
 
         var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/Test.loader.js";
+        var loaderUrl = buildUrl + "/TestTouch.loader.js";
         var config = {
-            dataUrl: buildUrl + "/Test.data.unityweb",
-            frameworkUrl: buildUrl + "/Test.framework.js.unityweb",
-            codeUrl: buildUrl + "/Test.wasm.unityweb",
+            dataUrl: buildUrl + "/TestTouch.data.unityweb",
+            frameworkUrl: buildUrl + "/TestTouch.framework.js.unityweb",
+            codeUrl: buildUrl + "/TestTouch.wasm.unityweb",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "DefaultCompany",
             productName: "IdaFightSoma",
